--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "music-bot",
   "main": "index.js",
-  "author": "ZerioDev",
-  "version": "5.0.0",
+  "author": "Vignesh",
+  "version": "1.0.0",
   "repository": "https://github.com/ZerioDev/Music-bot.git",
   "description": "A complete code to download for a music bot. Using a module (discord-player).",
   "scripts": {
